WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62735
Ignore responsiveness timer callbacks on closed pages
https://bugs.webkit.org/show_bug.cgi?id=62735
Summary
Ignore responsiveness timer callbacks on closed pages
Anders Carlsson
Reported
2011-06-15 09:55:45 PDT
Ignore responsiveness timer callbacks on closed pages
Attachments
Patch
(2.20 KB, patch)
2011-06-15 09:56 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-06-15 09:56:32 PDT
Created
attachment 97312
[details]
Patch
Anders Carlsson
Comment 2
2011-06-15 10:13:04 PDT
Committed
r88953
: <
http://trac.webkit.org/changeset/88953
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug