third_party/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -379,7 +379,7 @@ void WebPageProxy::close()
     m_policyClient.initialize(0);
     m_uiClient.initialize(0);
 
-    m_drawingArea.clear();
+    m_drawingArea = nullptr;
 
     process()->send(Messages::WebPage::Close(), m_pageID);
     process()->removeWebPage(m_pageID);
@@ -2866,6 +2866,9 @@ void WebPageProxy::frameSetLargestFrameChanged(uint64_t frameID)
 
 void WebPageProxy::processDidBecomeUnresponsive()
 {
+    if (!isValid())
+        return;
+
     updateBackingStoreDiscardableState();
 
     m_loaderClient.processDidBecomeUnresponsive(this);
@@ -2873,6 +2876,9 @@ void WebPageProxy::processDidBecomeUnresponsive()
 
 void WebPageProxy::processDidBecomeResponsive()
 {
+    if (!isValid())
+        return;
+    
     updateBackingStoreDiscardableState();
 
     m_loaderClient.processDidBecomeResponsive(this);
@@ -3192,6 +3198,8 @@ void WebPageProxy::flashBackingStoreUpdates(const Vector<IntRect>& updateRects)
 
 void WebPageProxy::updateBackingStoreDiscardableState()
 {
+    ASSERT(isValid());
+
     bool isDiscardable;
 
     if (!process()->responsivenessTimer()->isResponsive())
